argocd/dxb/vs-limit.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  labels:
    app.kubernetes.io/instance: limits
  name: limits
  namespace: istio-system
spec:
  gateways:
    - istio-system/ingress
  hosts:
    - '*'
  http:
    - match:
        - uri:
            prefix: /limits
      rewrite:
        uri: /api
      route:
        - destination:
            host: limits-ms-base.limits.svc.cluster.local
            port:
              number: 80
