argocd/dxb/vs-testvm.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  labels:
    app.kubernetes.io/instance: limits
  name: vm
  namespace: istio-system
spec:
  gateways:
    - istio-system/ingress
  hosts:
    - '*'
  http:
    - match:
        - uri:
            prefix: /vm
      route:
        - destination:
            host: testvm-service.payments.svc.cluster.local
            port:
              number: 80
